@@ -70,6 +70,9 @@ SDCC_REQUIRE_PROG($LEX, flex)
 AC_LANG_C
 
 AC_CHECK_HEADERS(endian.h sys/endian.h machine/endian.h sys/isa_defs.h)
+AC_LANG_PUSH([C++])
+AC_CHECK_HEADERS(stx/btree_set.h stx/btree_map.h,,AC_MSG_WARN([[STX library missing, using STL instead.]]))
+AC_LANG_POP([C++])
 
 AC_ARG_WITH([ccache],
     AC_HELP_STRING([--without-ccache], [do not use ccache even if available]),
