@@ -61,6 +61,12 @@
 /* Define to 1 if you have the <string.h> header file. */
 #undef HAVE_STRING_H
 
+/* Define to 1 if you have the <stx/btree_map.h> header file. */
+#undef HAVE_STX_BTREE_MAP_H
+
+/* Define to 1 if you have the <stx/btree_set.h> header file. */
+#undef HAVE_STX_BTREE_SET_H
+
 /* Define to 1 if you have the <sys/endian.h> header file. */
 #undef HAVE_SYS_ENDIAN_H
 
